# college

Assembler/lab1/: sum.asm  sum.lst  sum.map  sum.out
Assembler/lab2/: simplify.asm  simplify.lst  simplify.map  simplify.out
CPP/final/src/: CMakeLists.txt
CPP/final/src/01-Sort/: Makefile  sort  sort.cpp
CPP/final/src/02-Memory/: Makefile  memory  memory.cpp  thing.cpp  thing.h  widget.cpp  widget.h
CPP/final/src/03-Lambda/: Makefile  lambda  lambda.cpp
CPP/final/src/04-BST/: Makefile  bst  bst.cpp  bst.h  header.mak  out.txt  output.txt
CPP/final/src/05-Threads/: Makefile  threads  threads.cpp
CPP/final/src/06-FizzBuzz/: Makefile  fb_main  fb_main.cpp  fizzbuzz.cpp  fizzbuzz.h
CPP/final/src/07-Accumulate/: Makefile  accumulate  accumulate.cpp
CPP/midterm/stu/: CMakeLists.txt  try.txt
CPP/midterm/stu/src/bike/: Makefile  bike.cpp  bike.h  bike_main  bike_main.cpp
CPP/midterm/stu/src/bike/html/: annotated.html  bike_8cpp.html  bike_8cpp__incl.map  bike_8cpp__incl.md5  bike_8h.html  bike_8h__dep__incl.map  bike_8h__dep__incl.md5  bike_8h__incl.map  bike_8h__incl.md5  bike__main_8cpp.html  bike__main_8cpp__incl.map  bike__main_8cpp__incl.md5  class_bike-members.html  class_bike.html  class_bike__coll__graph.map  class_bike__coll__graph.md5  classes.html  classritcs_1_1_bike-members.html  classritcs_1_1_bike.html  classritcs_1_1_bike__coll__graph.map  classritcs_1_1_bike__coll__graph.md5  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  namespaceritcs.html  namespaces.html
CPP/midterm/stu/src/bike/html/search/: all_0.js  all_1.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  search.js
CPP/midterm/stu/src/infomercial/: Makefile  crap.cpp  crap.h  infomercial_main  infomercial_main.cpp  schticky.cpp  schticky.h  shamwow.cpp  shamwow.h  slapchop.cpp  slapchop.h
CPP/midterm/stu/src/matrix/: Makefile  matrix.cpp  matrix.h  matrix_main  matrix_main.cpp
CPP/midterm/stu/src/pair/: Makefile  pair.h  pair_main  pair_main.cpp
CPP/midterm/stu/src/widget/: Makefile  header.mak  thingamajig.cpp  thingamajig.h  widget.cpp  widget.h  widget_main  widget_main.cpp
CPP/midterm/stu/src/words/: Makefile  words_main.cpp
(+328 files in other folders)
